# nu_plugin_from_hdf5

./: Cargo.toml  README.md
src/: from_hdf5.rs  hdf5_ext.rs  main.rs
