[package]
name = "nu_plugin_from_hdf5"
version = "0.1.0"
edition = "2021"

[dependencies]
nu-plugin = "0.84"
nu-protocol = { version = "0.84", features = ["plugin"] }
hdf5 = { git = "https://github.com/aldanor/hdf5-rust.git" }
hdf5-sys = { git = "https://github.com/aldanor/hdf5-rust.git" }

[profile.release]
lto = true
codegen-units = 1
