[package]
name = "nu_plugin_from_hdf5"
version = "0.1.0"
edition = "2021"

[dependencies]
nu-plugin = "0.98"
nu-protocol = { version = "0.98", features = ["plugin"] }
hdf5 = { package = "hdf5-metno", version = "0.9" }
hdf5-sys = { package = "hdf5-metno-sys", version = "0.9" }

[profile.release]
lto = true
codegen-units = 1
